# django-test

./: pyproject.toml
first_project/: db.sqlite3
first_project/blog/: views.py
first_project/blog/templates/blog/: about.html  base.html  home.html
first_project/first_project/: settings.py  urls.py
